1.2.2
=====
* comment by changed to mrwolfe user instead of django user
  You may have to check the constraint on the mrwolfe_comment table and
  recreate it

1.2.1
=====
 * comment by added:
   ALTER TABLE mrwolfe_comment add column comment_by_id INTEGER;
 * added urlize to comment rendering

1.2.0
=====
 * Added TNEF parse for dealing with winmail.dat sadness
 * Cosmetic changes
 * Added support for OpenID
 * Added optinal wiki addon
 * Removed most popups for editing
 * Set status of issue to open when it is in wait_input and someone reacts
 * removed bootstrap from sources
 * Dropped not null constraint from status. If you migrate from an earlier
   version of Mr.Wolfe, do something like: alter table mrwolfe_status alter
   column comment drop not null;

1.1.1b
======
 * Fix for issue #10
 * Fix for issue #9
 * Fix for issue #6
 * Fix for issue #7
 * Unicode problem in utils fixed

1.1.0b
======
 * Added IMAP support
   You need to change the mrwolfe_mailqueue for that, as follows:
   ALTER TABLE mrwolfe_mailqueue add column protocol integer NOT NULL;

1.0.6a
======
 * Style consistency fixes
 * cleanup of redundant code

1.0.5a
======
 * Fixed broken search index
 * Added comments and status comments to index
 * minor style fixes

1.0.4a
======
 * Added 'on hold' status
 * notification enhancements
 * deep clone support
 * charset detection for handling messages
 * Moved to haystack 2.0
 * Moved to Django 1.5

1.0.3a
======
 * Enabled skin plugin (read docs/skin.md)
 * set default to True for ALLOW_NON_CONTACTS
 * bounce mail when Mr.Wolfe doesn't accept
 * Added column email_from to SLA:
   ALTER TABLE mrwolfe_sla ADD COLUMN email_from VARCHAR(75);

1.0.2a
======
 * More reading material

1.0.1a
======
 * Fixed SLA view

1.0.0a
======
Initial release